[package]
name = "sonny_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
async-std = "*"
[dependencies.windows]
version = "0.48.0"
features = [
    "Foundation_Collections",
    "Foundation_Numerics",
    "Graphics",
    "System",
    "UI_Composition_Desktop",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_WindowsProgramming",
]
